--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto !eol
+/INSTALL -text
+/LICENSE -text
 MOCHA/AUTHORS -text
-MOCHA/INSTALL -text
 MOCHA/Instances/Calibration/README -text
 MOCHA/Instances/Calibration/gn10e22 -text
 MOCHA/Instances/Calibration/gn10e22d2w0w100.mo -text
@@ -596,10 +597,8 @@ MOCHA/Instances/Solids/Solid-truncatedtetrahedron-d2w0w20.mo -text
 MOCHA/Instances/Solids/Solid-truncatedtetrahedron-d3w0w100.mo -text
 MOCHA/Instances/Solids/Solid-truncatedtetrahedron-d3w0w1000.mo -text
 MOCHA/Instances/Solids/Solid-truncatedtetrahedron-d3w0w20.mo -text
-MOCHA/LICENSE -text
 MOCHA/Makefile.am -text
 MOCHA/Makefile.in -text
-MOCHA/README -text
 MOCHA/TODO -text
 MOCHA/acinclude.m4 -text
 MOCHA/aclocal.m4 -text
@@ -639,6 +638,7 @@ MOCHA/src/tabusearch.cpp -text
 MOCHA/src/testmatrix.cpp -text
 /Makefile.am -text
 /Makefile.in -text
+/README -text
 /acinclude.m4 -text
 /aclocal.m4 -text
 /config.guess -text
