--- a/.gitattributes
+++ b/.gitattributes
@@ -640,6 +640,7 @@ MOCHA/src/point2po.cpp -text
 MOCHA/src/tabusearch.cpp -text
 MOCHA/src/testmatrix.cpp -text
 MOCHA/test/Makefile.am -text
+MOCHA/test/Makefile.in -text
 MOCHA/test/run_unitTests -text
 MOCHA/test/unitTestInput.txt -text
 /Makefile.am -text
