--- a/MOCHA/Makefile.in
+++ b/MOCHA/Makefile.in
@@ -43,6 +43,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
+@ALWAYS_FALSE@am__append_1 = test
 DIST_COMMON = README $(am__configure_deps) $(dist_doc_DATA) \
 	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(srcdir)/config.h.in $(top_srcdir)/configure AUTHORS INSTALL \
@@ -78,7 +79,7 @@ dist_docDATA_INSTALL = $(INSTALL_DATA)
 DATA = $(dist_doc_DATA)
 ETAGS = etags
 CTAGS = ctags
-DIST_SUBDIRS = $(SUBDIRS)
+DIST_SUBDIRS = src test
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -242,7 +243,7 @@ sol_cc_compiler = @sol_cc_compiler@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = src
+SUBDIRS = src $(am__append_1)
 docdir = ${datadir}/doc/${PACKAGE}
 dist_doc_DATA = README
 EXTRA_DIST = LICENSE \
@@ -1299,6 +1300,11 @@ uninstall-info: uninstall-info-recursive
 	uninstall uninstall-am uninstall-dist_docDATA \
 	uninstall-info-am
 
+
+test: unitTest
+
+unitTest: all
+	cd test; $(MAKE) test
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
