Changed Makefile.am in trunk/MOCHA/test to not call chmod on ./run_unitTest, but run_unitTest

--- a/MOCHA/test/Makefile.am
+++ b/MOCHA/test/Makefile.am
@@ -11,7 +11,7 @@ AUTOMAKE_OPTIONS = foreign
 ########################################################################
 
 test: 
-	chmod u+x ./run_unitTests
+	chmod u+x run_unitTests
 	./run_unitTests
 
 unitTest: test
