--- a/MOCHA/test/Makefile.in
+++ b/MOCHA/test/Makefile.in
@@ -372,7 +372,7 @@ uninstall-am: uninstall-info-am
 ########################################################################
 
 test: 
-	chmod u+x ./run_unitTests
+	chmod u+x run_unitTests
 	./run_unitTests
 
 unitTest: test
