Added AC_COIN_VPATH_LINK(test/run_unitTests) to configure.ac

--- a/MOCHA/configure.ac
+++ b/MOCHA/configure.ac
@@ -138,6 +138,7 @@ AS_IF([test "x$with_gmp" != xno],
 
 
 AC_CONFIG_HEADERS([config.h])
+AC_COIN_VPATH_LINK(test/run_unitTests)
 AC_CONFIG_FILES([
  Makefile
  src/Makefile
