--- a/MOCHA/Makefile.in
+++ b/MOCHA/Makefile.in
@@ -1060,7 +1060,7 @@ distclean-tags:
 distdir: $(DISTFILES)
 	$(am__remove_distdir)
 	mkdir $(distdir)
-	$(mkdir_p) $(distdir)/Instances/Calibration $(distdir)/Instances/Examples $(distdir)/Instances/ExperimentalDesign $(distdir)/Instances/Solids
+	$(mkdir_p) $(distdir)/Instances/Calibration $(distdir)/Instances/Examples $(distdir)/Instances/ExperimentalDesign $(distdir)/Instances/Solids $(distdir)/test
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
